--- a/AuthenticationTuanThu/appsettings.json
+++ b/AuthenticationTuanThu/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Database=AuthenticationTuanThu;User ID=SA;Password=Password789;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=.;Database=AuthenticationTuanThu;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
